2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (display_rotation_from_text), (create_rotate_menu): readd gettext
	macro that accidentally got stripped

2007-10-28  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (display_rotation_from_text), (get_current_resolution),
	(get_current_rate), (get_current_rotation), (wrap_in_label),
	(resolution_changed_callback), (generate_rate_menu),
	(generate_resolution_menu), (initialize_combo_layout),
	(create_rate_menu), (create_rotate_menu), (create_screen_widgets),
	(create_dialog), (save_timeout_callback), (run_revert_dialog),
	(save_to_gconf), (cb_dialog_response), (main): whitespace cleanup and a
	few minor tweaks

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (free_display_info), (update_display_info),
	(read_display_info), (apply_config), (revert_config): revert some of
	the previous "clean-up", add some new, and fix another leak

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (run_revert_dialog), (main): fix string capitalization

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (free_display_info), (restart_screensaver),
	(apply_config), (revert_config), (cb_dialog_response), (main): clean up
	code a bit and fix a few leaks

2007-06-29  Jens Granseuer  <jensgr@gmx.net>

	* display-capplet.png: remove

	* Makefile.am:
	* display-properties.desktop.in.in:
	* icons/16x16/gnome-display-properties.png:
	* icons/22x22/gnome-display-properties.png:
	* icons/24x24/gnome-display-properties.png:
	* icons/32x32/gnome-display-properties.png:
	* icons/scalable/gnome-display-properties.svg:
	* main.c: (create_dialog): add and use new icon by Jakub Steiner
	<jimmac@ximian.com>. Closes bug #375230.

2007-06-26  Michael Terry  <mike@mterry.name>

	* Makefile.am, main.c, display-properties.desktop.in.in: Use
	icon theme instead of global pixmaps dir for app icon. Closes
	bug #450777.

2007-06-16  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (run_revert_dialog), (cb_dialog_response): don't make the